2011-01-18 MORITA Hajime  <morrita@google.com>

Refactoring: EventHandler::handleTextInputEvent should accept an enum instead of bools.
        https://bugs.webkit.org/show_bug.cgi?id=52608

        No new tests. no behavioral change.

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * dom/TextEvent.cpp:
        (WebCore::TextEvent::create):
        (WebCore::TextEvent::createForDrop):
        (WebCore::TextEvent::TextEvent):
        * dom/TextEvent.h:
        (WebCore::TextEvent::isLineBreak):
        (WebCore::TextEvent::isBackTab):
        (WebCore::TextEvent::isPaste):
        (WebCore::TextEvent::isDrop):
        * dom/TextEventInputType.h: Added. Extracted from TextEvent::TextInputType.
        * editing/EditorCommand.cpp:
        (WebCore::executeInsertBacktab):
        (WebCore::executeInsertLineBreak):
        (WebCore::executeInsertNewline):
        (WebCore::executeInsertTab):
        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleTextInputEvent):
        * page/EventHandler.h:

Canonical link: https://commits.webkit.org/66336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76098 268f45cc-cd09-0410-ab3c-d52691b4dbfc